# FloatplaneAPI

./: .dockerignore  .editorconfig  .gitignore  .redocly.yaml  Dockerfile  LICENSE  Makefile  README.md  api-list.csv  floatplane-asyncapi-chat-specification.json  floatplane-asyncapi-frontend-specification.json  floatplane-openapi-specification.json  fp-frontend-versions.txt  oag-gen-docs.sh  oag-gen-swift.sh  oag-validate.sh  openapitools.json  package-lock.json  package.json
.github/workflows/: integration-test.yml
src/: async-schemas.json  floatplane-asyncapi-chat-specification.json  floatplane-asyncapi-frontend-specification.json  floatplane-openapi-specification.json  fp-frontend-diff-2.sh  fp-frontend-diff.sh  fp-frontend-fetch-2.sh  fp-frontend-versions.txt  rapidoc.html  trim.js
static/: index.html  rapidoc-full.html  rapidoc.html
static/SwaggerUI/: index.html
tests/: ExtendedApiClient.cs  generate-csharp.sh  openapitools.json  regenerate-csharp-test-library.sh
tests/FloatplaneAPIClientCSharpTester/: FloatplaneAPIClientCSharp.sln  README.md  appveyor.yml
tests/FloatplaneAPIClientCSharpTester/.openapi-generator/: FILES
tests/FloatplaneAPIClientCSharpTester/src/FloatplaneAPIClientCSharp.Test/: ApiTestHelper.cs  ApiTestSampleData.cs  FloatplaneAPIClientCSharp.Test.csproj
tests/FloatplaneAPIClientCSharpTester/src/FloatplaneAPIClientCSharp.Test/Api/: AuthV2ApiTests.cs  AuthV3ApiTests.cs  (+20 more)
tests/SchemaThesisTests/: pyproject.toml
tests/SchemaThesisTests/tests/: test_AuthV3API.py  test_Flow.py
tools/: find-nullables.js  fp-frontend-fetch.sh  trim.js
